Adding comments, and moving imports

--- a/Chicago_FringeBanks.ipynb
+++ b/Chicago_FringeBanks.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Fringe Banks in Chicago:\n",
-    "- After being recommended and reading [Fringe Banking: Check-Cashing Outlets, Pawnshops, and the poor](https://www.amazon.com/Fringe-Banking-Check-Cashing-Outlets-Pawnshops/dp/0871541807) by a mentor of mine I became much more interested in the determinants of Fringe Bank location. The text and other studies on this subject often leverage expensive trade data on branch locations. To circumvent this, I chose to scrape yellow pages for a number of Fringe Bank keywords (dropping duplicates by address) and plot these locations against the FDIC Summary of Deposits data. \n",
+    "- A few years ago, after being recommended and reading [Fringe Banking: Check-Cashing Outlets, Pawnshops, and the poor](https://www.amazon.com/Fringe-Banking-Check-Cashing-Outlets-Pawnshops/dp/0871541807) by a mentor of mine I became much more interested in the determinants of Fringe Bank location. The text and other studies on this subject often leverage expensive trade data on branch locations. To circumvent this, I chose to scrape yellow pages for a number of Fringe Bank keywords (dropping duplicates by address) and plot these locations against the FDIC Summary of Deposits data. \n",
     "- Unfortunately this approach doesn't allow me to study branch locations over time, but makes for great Python practice! In this notebook I leverage a few useful packages/methods:\n",
     "1. Webscraping python using user defined functions and functions imported from _requests_.\n",
     "2. Geocoding addresses using _censusgeocode_\n",
@@ -23,10 +23,15 @@
     "import argparse\n",
     "import csv\n",
     "import pandas as pd\n",
-    "\n",
-    "import censusgeocode as cg\n",
     "import glob\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I define a function __parse_listing()__ that will scrape the name, location, phone number, and other data from _https://www.yellowpages.com_. "
    ]
   },
   {
@@ -142,6 +147,13 @@
     "\t\texcept:\n",
     "\t\t\tprint(\"Failed to process page\")\n",
     "\t\t\treturn []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I then use __parse_listing()__ to loop through a list of common _Fringe Banking_ terms. While the html of a given _yellowpages_ search does not provide any values representing the number of _hits_ nor available pages, I iterate through every available page by first checking whether or not the _dataFrame_ read is empty, and skipping to the next keyword if empty."
    ]
   },
   {
@@ -276,19 +288,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to get the latitude, longitude, census tract, and census block, I use the _censusgeocode_ package to loop through each address and pull these values. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Geocode by street address-locality(zip,state) using census geocoder\n",
+    "import censusgeocode as cg\n",
     "\n",
     "fringe_bank['Address'] =fringe_bank.street.str.cat(fringe_bank.locality,sep=\" \")\n",
     "\n",
     "fringe_bank['x'] = None\n",
     "fringe_bank['y'] = None\n",
     "fringe_bank['STATE'] = None\n",
-    "fringe_bank['GEOID'] = None\n",
+    "fringe_bank['GEOID'] =\n",
     "fringe_bank['BLOCK'] = None\n",
     "fringe_bank['TRACT'] = None\n",
     "i=0\n",
@@ -304,6 +324,13 @@
     "            for x in list(range(len(spl_word))):\n",
     "                tmp = result.partition(spl_word[x])[2].split()[0].replace(\",\", '').replace(\"}\",\"\")\n",
     "                fringe_bank[spl_word[x]].iloc[i] = tmp\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I then read in the most recently available Summary of Deposits data (2019) to find individual branch locations. I subset the data _BRSERTYPE_ == 11, to only keep \"Brick and Mortor\" locations."
    ]
   },
   {
@@ -342,6 +369,13 @@
     "import descartes\n",
     "import geopandas as gpd\n",
     "from shapely.geometry import Point, Polygon\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, I plot these Fringe Bank locations along with traditional bank branch locations, over a great shapefile containing Chicago street center lines available at (https://data.cityofchicago.org/Transportation/Street-Center-Lines/6imu-meau)"
    ]
   },
   {
